# OASIM_ATM

./: CMakeLists.txt  LICENSE  README.md
NewOASIM/: README.md  build_debug_gcc.sh  build_debug_intel.sh  build_release_gcc.sh  build_release_intel.sh
NewOASIM/OASIMlib/: config.f90  sfcirr.f90  sfcsolz.f90  sunmod.f90
NewOASIM/OASIMlib/fortran-yaml/: yaml_settings.F90  yaml_types.F90
NewOASIM/test/: CMakeLists.txt  config.yaml
NewOASIM/test/python/: oasim.py  oasim_timeseries.py
OASIMlib/: CMakeLists.txt  clrtrans.f90  common.f90  light.f90  matrix_read.f90  monrad.f90  oasim-py.f90  oasim.f90  ocalbedo.f90  slingo.f90  tables.f90
OASIMlib/fortran-yaml/: CMakeLists.txt
oasimpub/: create_lista_date_txt.py  monradyr.com  monradyrun.com
oasimpub/bcs/: setyr.com
oasimpub/src/: Makefile  clrtrans.F  comlte.h  define.h  light.F  monrad.F  rdatopt.F  sfcirr.F  sfcsolz.F  slingo.F  sunmod.F
test/f90/: CMakeLists.txt  test.f90
test/python/: MPI_oasim_timeseries.py  float_MPI_oasim_timeseries.py  oasim_timeseries.py
tools/: CDOM_absorptionCMEMS_TEST.py  oasim_lib_caller.py
tools/CREATE_INPUT_ECMWF/: AEROSOL_indata_gen.py  ERA5_downloader.py  ERA5_indata_gen.py  MODIS_AER_indata_gen.py  MODIS_CLD_indata_gen.py  MODIS_indata_gen.py  aerosol.py  create_cloud_nc.py  create_lista_date_txt.py  create_opt_nc.py  cut_ERA5.sh  cut_MODIS.sh  daily_oasim_input_gen.py  era5_climatology.py  job.M100.slurm  launcher.sh  launcherPL.sh  monthly_clim_gen.py
tools/FORMAT_CONVERSION/CLD/: IOnc.f90  dat2NetCDF.F  launcher.sh
tools/FORMAT_CONVERSION/MOD_AER/: IOnc.f90  compila  dat2NetCDF.F  launcher.sh
tools/FORMAT_CONVERSION/MOD_CLD/: IOnc.f90  compila  dat2NetCDF.F  launcher.sh
tools/FORMAT_CONVERSION/MOD_OPT/: IOnc.f90  compila  dat2NetCDF.F  launcher.sh
tools/PYTHON-NOTEBOOKS/: OASIM_T2.ipynb
